tests/test_assets/semantic/invalid/mutation/non_assignable_identifiers.cog
CONSTANT :: 1;

test::() -> void {
    CONSTANT = 2;
    CONSTANT += 1;
    CONSTANT++;
}